Fix opencollective donors being cut off

--- a/src/_assets/scss/_tdevs_custom.scss
+++ b/src/_assets/scss/_tdevs_custom.scss
@@ -150,6 +150,10 @@
   }
 }
 
+.opencollective-banner {
+  height: auto;
+}
+
 .cta-job-btn {
   font-size: 20px;
   font-style:italic;
